--- a/swiftquiz-app/Base.lproj/Main.storyboard
+++ b/swiftquiz-app/Base.lproj/Main.storyboard
@@ -16,9 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="LaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="8oc-n7-Plk">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="8oc-n7-Plk">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NFj-Fr-Ymg">
                                 <rect key="frame" x="0.0" y="792" width="414" height="60"/>
@@ -35,16 +34,22 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="8oc-n7-Plk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Lm0-xi-sfa"/>
+                            <constraint firstItem="8oc-n7-Plk" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="gaH-5F-0rP"/>
+                            <constraint firstAttribute="bottom" secondItem="8oc-n7-Plk" secondAttribute="bottom" id="kyP-s8-3kj"/>
+                            <constraint firstItem="8oc-n7-Plk" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="rXV-Fh-pYk"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="18.840579710144929" y="77.678571428571431"/>
         </scene>
-        <!--View Controller-->
+        <!--Quiz View Controller-->
         <scene sceneID="Chl-5J-JdR">
             <objects>
-                <viewController id="hLW-AA-XFE" sceneMemberID="viewController">
+                <viewController id="hLW-AA-XFE" customClass="QuizViewController" customModule="swiftquiz_app" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="n7K-XQ-TqC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -78,6 +83,9 @@
                                         <inset key="contentEdgeInsets" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain"/>
+                                        <connections>
+                                            <action selector="selectAnswer:" destination="hLW-AA-XFE" eventType="touchUpInside" id="TQQ-X1-Fls"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iEb-Wk-alL">
                                         <rect key="frame" x="1" y="46" width="413" height="44"/>
@@ -122,17 +130,23 @@
                     </view>
                     <navigationItem key="navigationItem" id="iuy-W1-WPj"/>
                     <connections>
-                        <segue destination="5Oa-dq-5yj" kind="show" id="VWT-3s-Vee"/>
+                        <outlet property="lbQuestion" destination="WGg-eK-Vcm" id="KVU-Pq-WyK"/>
+                        <outlet property="viTimer" destination="ZSs-Rq-eX9" id="rZs-Up-Kgy"/>
+                        <outletCollection property="btAnswers" destination="rf6-BD-Weu" collectionClass="NSMutableArray" id="Yyr-Dy-AZh"/>
+                        <outletCollection property="btAnswers" destination="iEb-Wk-alL" collectionClass="NSMutableArray" id="Y7a-hf-5L2"/>
+                        <outletCollection property="btAnswers" destination="Mar-46-SL4" collectionClass="NSMutableArray" id="knc-RG-6eF"/>
+                        <outletCollection property="btAnswers" destination="7w0-Mk-E53" collectionClass="NSMutableArray" id="8n6-Ap-Lk1"/>
+                        <segue destination="5Oa-dq-5yj" kind="show" identifier="resultSegue" id="VWT-3s-Vee"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1ZI-iO-uDj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="763.768115942029" y="77.678571428571431"/>
         </scene>
-        <!--View Controller-->
+        <!--Result View Controller-->
         <scene sceneID="hhI-Fe-1Su">
             <objects>
-                <viewController id="5Oa-dq-5yj" sceneMemberID="viewController">
+                <viewController id="5Oa-dq-5yj" customClass="ResultViewController" customModule="swiftquiz_app" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jME-vv-cwN">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -180,12 +194,21 @@
                                 <inset key="titleEdgeInsets" minX="-1" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Reiniciar"/>
+                                <connections>
+                                    <action selector="close:" destination="5Oa-dq-5yj" eventType="touchUpInside" id="jhz-qp-oHT"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="PVe-8q-laK"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="Okk-8G-SXl"/>
+                    <connections>
+                        <outlet property="lbAswered" destination="62S-i8-mHA" id="3O5-TU-0cj"/>
+                        <outlet property="lbCorrect" destination="BDP-tZ-iaK" id="egV-FM-tSy"/>
+                        <outlet property="lbScore" destination="W4C-HI-xmD" id="am5-VI-ObJ"/>
+                        <outlet property="lbWrong" destination="TRI-lY-qLo" id="ccf-YN-nrp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dWK-1s-NV1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
